merge guide and local